Apply padding and alignment changes to fix layout

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 10px;
 }
 
 .icon {
@@ -32,7 +33,7 @@ body {
   border-radius: 50%;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .close-button {
@@ -66,4 +67,22 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.middle {
+  display: flex;
+  flex-direction: column;
+  align-items: space-evenly;
+}
+
+.top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.text {
+  flex-wrap: wrap;
 }
